the setup of the weather project

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "y",
+  "name": "weatherapp",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack watch",
+    "watch": "webpack --watch",
     "build": "webpack"
   },
   "repository": {
@@ -18,7 +18,10 @@
     "url": "https://github.com/Oghenebrume50/weather-app/issues"
   },
   "homepage": "https://github.com/Oghenebrume50/weather-app#readme",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^8.1.0",
+    "dotenv-webpack": "^1.7.0"
+  },
   "devDependencies": {
     "eslint": "^6.2.1",
     "eslint-config-airbnb-base": "^14.0.0",
